<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OptionsActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/previous"
            android:onClick="previousClicked"/>
    <FrameLayout
        android:id="@+id/courtTypeFrameLayoutId"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next"
            android:onClick="nextClicked"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_dificulty"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="16dp"/>
    <Spinner
        android:id="@+id/dificultySpinnerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_speed"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="16dp"/>
    <Spinner
        android:id="@+id/speedSpinnerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"></Spinner>

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/button_style"
            android:onClick="saveOptions"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:background="@drawable/button_style"
            android:onClick="resetOptions"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/button_style"
            android:onClick="dontSaveOptions"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

</LinearLayout>