<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activities.HomeActivity"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_close"
                android:onClick="close"/>
        </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/english_flag"
            android:onClick="changeLanguageToEnglish"
            />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/serbian_flag"
            android:onClick="changeLanguageToSerbian"
            />
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/continueButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/continue_game"
            android:background="@drawable/button_style"
            android:visibility="invisible"
            android:onClick="continueButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/play_game"
            android:background="@drawable/button_style"
            android:onClick="playButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_options"
            android:layout_margin="16dp"
            android:background="@drawable/button_style"
            android:onClick="optionsClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_stats"
            android:layout_margin="16dp"
            android:background="@drawable/button_style"
            android:onClick="statisticsClicked"/>

    </LinearLayout>


</LinearLayout>