<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activities.PlayerNameActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/pvpGameModeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PVP"
            android:textSize="20sp"
            android:layout_margin="16dp"/>

        <RadioButton
            android:id="@+id/pveGameModeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="PVE"
            android:textSize="20sp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/player1NameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:hint="@string/player_1_name"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/darkBlue"/>

    <EditText
        android:id="@+id/player2NameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:hint="@string/player_2_name"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/darkBlue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <RadioGroup
            android:id="@+id/RadioGroupGameTypeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/timeGameTypeRadioButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_game_type"
                android:textSize="20sp"
                android:layout_marginLeft="16dp"
                />

            <RadioButton
                android:id="@+id/goalsGameTypeRadioButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goals_game_type"
                android:textSize="20sp"
                android:layout_margin="16dp"
                android:checked="false" />

        </RadioGroup>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <Spinner
                android:id="@+id/timeSpinnerId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:background="@drawable/spinner_style"/>

            <Spinner
                android:id="@+id/goalsSpinnerId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="invisible"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:background="@drawable/spinner_style"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/playButtonId"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/play_game"
            android:onClick="playButtonClicked"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <Button
            android:id="@+id/cancelButtonId"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/cancel"
            android:onClick="cancelButtonClicked"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            />
    </LinearLayout>


</LinearLayout>